# KCNet-SFML-GameTest

./: .gitignore  CMakeLists.txt  Doxyfile  KCNet-SFML-GameTest.sln  KCNet-SFML-GameTest.vcxproj  KCNet-SFML-GameTest.vcxproj.filters  LICENSE.md  Libraries.md  README.md  Readme.md  clean-build.ps1
dependencies/: CMakeLists.txt
dependencies/sfml/: CMakeLists.txt
lib/SFML-Slider/: README.md  SliderSFML.cpp
resources/: game-settings.ini
resources/sounds/music/: credits.txt
src/: Enemy.cpp  Enemy.h  Game.cpp  Game.h  Main.cpp  WindowManager.cpp  WindowManager.h  bullet.cpp  bullet.h  defines.cpp  defines.h  enemy.cpp  enemy.h  entity.cpp  entity.h  game.cpp  game.h  main.cpp  pch.h  player.cpp  player.h  slider_test.cpp  slider_test.h  version.h.in  window_manager.cpp  window_manager.h
src/menus/: IMenuBase.h
src/menus/debug/: imgui_button_menu.cpp  imgui_button_menu.h  imgui_controller_menu.cpp  imgui_controller_menu.h  imgui_enemy_menu.cpp  imgui_enemy_menu.h  imgui_menu.cpp  imgui_menu.h  imgui_mouse_menu.cpp  imgui_mouse_menu.h  imgui_music_menu.cpp  imgui_music_menu.h  imgui_player_menu.cpp  imgui_player_menu.h  imgui_screen_menu.cpp  imgui_screen_menu.h  imgui_timers_menu.cpp  imgui_timers_menu.h
src/util/: MouseUtil.cpp  MouseUtil.h  MusicUtil.cpp  MusicUtil.h  button_util.cpp  button_util.h  defines.h  file_size_util.cpp  file_size_util.h  imgui_setup.cpp  imgui_setup.h  ini_handler.cpp  ini_handler.h  input_handler.cpp  input_handler.h  logger.cpp  logger.h  mouse_util.cpp  mouse_util.h  music_util.cpp  music_util.h  random_number_generator.cpp  random_number_generator.h  text_handler.cpp  text_handler.h  timers.cpp  timers.h
